--- a/monte-carlo-integration-example.ipynb
+++ b/monte-carlo-integration-example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## use random # generator to simulate a simple gaussian process"
+    "## perform a simple monte carlo integration to compute pi"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "set some properties of the random system"
+    "set some parameters of the integration"
    ]
   },
   {
@@ -31,17 +31,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_samples = 10000 ##of random samples to use\n",
-    "n_bins = 100  ##of bins for our histogram\n",
-    "sigma = 1.0  #rms width of the gaussian\n",
-    "mu = 0.0   #mean of gaussian"
+    "n = 10000   #number of samples for the integration"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "generate random # using numpy"
+    "make some uniformly sampled variables [-1,1]"
    ]
   },
   {
@@ -50,16 +47,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.random.normal(mu,sigma,n_samples)\n",
-    "print(x.min())\n",
-    "print(x.max())"
+    "x = np.random.uniform(-1,1,n)\n",
+    "y = np.random.uniform(-1,1,n)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## define function to plot gaussian"
+    "find # of samples within the unit cirle"
    ]
   },
   {
@@ -68,15 +64,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gaussian(x,mu,sigma):\n",
-    "    return 1./(2.0*np.pi*sigma**2)**0.5 * np.exp(-0.5*((x-mu)/sigma)**2)"
+    "ir = np.where((x**2 + y**2)<1.0)[0]\n",
+    "ur = np.where((x**2 + y**2)>=1.0)[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## create histogram of data"
+    "## plot samples and circle"
    ]
   },
   {
@@ -86,15 +82,40 @@
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(7,7))\n",
-    "y_hist, x_hist, ignored = plt.hist(x, bins=n_bins, range=[-5,5], density=True)\n",
-    "xx = np.linspace(-5.0,5.0,1000)\n",
-    "plt.plot(xx,gaussian(xx,mu,sigma),color=\"red\")\n",
-    "plt.ylim([0,0.5])\n",
-    "plt.xlim([-5,5])\n",
-    "plt.gca().set_aspect(20)\n",
+    "plt.xlim([-1.1,1.1])\n",
+    "plt.ylim([-1.1,1.1])\n",
+    "plt.plot(x[ir],y[ir],'.',color=\"blue\")\n",
+    "plt.plot(x[ur],y[ur],'.',color=\"0.75\")\n",
+    "theta = np.linspace(0,2*np.pi,1000)\n",
+    "xc = np.cos(theta)\n",
+    "yc = np.sin(theta)\n",
+    "plt.plot(xc,yc,color=\"green\")\n",
+    "\n",
     "plt.xlabel('x')\n",
-    "plt.ylabel('y(x)')\n",
+    "plt.ylabel('y')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "report the result for pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pi_approx = 4.0*len(ir)/float(n)\n",
+    "\n",
+    "error_pi = (pi_approx-np.pi)/np.pi\n",
+    "\n",
+    "print(\"Number of samples = \",n)\n",
+    "print(\"Approximate pi    = \",pi_approx)\n",
+    "print(\"Error in approx   = \",error_pi)"
    ]
   },
   {
